--- a/packages/tiptap-commands/package.json
+++ b/packages/tiptap-commands/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiptap-commands",
+  "name": "@timedright/tiptap-commands",
   "version": "1.13.1",
   "description": "Commands for tiptap",
   "homepage": "https://tiptap.scrumpy.io",
@@ -14,10 +14,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scrumpy/tiptap.git"
+    "url": "git+https://github.com/dougalg/tiptap.git"
   },
   "bugs": {
-    "url": "https://github.com/scrumpy/tiptap/issues"
+    "url": "https://github.com/dougalg/tiptap/issues"
   },
   "dependencies": {
     "prosemirror-commands": "1.1.4",
@@ -27,6 +27,6 @@
     "prosemirror-state": "1.3.3",
     "prosemirror-tables": "1.0.0",
     "prosemirror-utils": "0.9.6",
-    "tiptap-utils": "^1.9.1"
+    "@timedright/tiptap-utils": "^1.9.1"
   }
 }
