--- a/packages/tiptap-extensions/package.json
+++ b/packages/tiptap-extensions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiptap-extensions",
+  "name": "@timedright/tiptap-extensions",
   "version": "1.29.1",
   "description": "Extensions for tiptap",
   "homepage": "https://tiptap.scrumpy.io",
@@ -15,10 +15,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scrumpy/tiptap.git"
+    "url": "git+https://github.com/scrumpy/dougalg.git"
   },
   "bugs": {
-    "url": "https://github.com/scrumpy/tiptap/issues"
+    "url": "https://github.com/scrumpy/dougalg/issues"
   },
   "dependencies": {
     "lowlight": "1.13.1",
@@ -30,8 +30,8 @@
     "prosemirror-transform": "1.2.5",
     "prosemirror-utils": "0.9.6",
     "prosemirror-view": "1.14.7",
-    "tiptap": "^1.27.1",
-    "tiptap-commands": "^1.13.1"
+    "@timedright/tiptap": "^1.27.1",
+    "@timedright/tiptap-commands": "^1.13.1"
   },
   "peerDependencies": {
     "vue": "^2.5.17",
