--- a/packages/tiptap/package.json
+++ b/packages/tiptap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiptap",
+  "name": "@timedright/tiptap",
   "version": "1.27.1",
   "description": "A rich-text editor for Vue.js",
   "homepage": "https://tiptap.scrumpy.io",
@@ -14,10 +14,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scrumpy/tiptap.git"
+    "url": "git+https://github.com/dougalg/tiptap.git"
   },
   "bugs": {
-    "url": "https://github.com/scrumpy/tiptap/issues"
+    "url": "https://github.com/dougalg/tiptap/issues"
   },
   "dependencies": {
     "prosemirror-commands": "1.1.4",
@@ -28,8 +28,8 @@
     "prosemirror-model": "1.9.1",
     "prosemirror-state": "1.3.3",
     "prosemirror-view": "1.14.7",
-    "tiptap-commands": "^1.13.1",
-    "tiptap-utils": "^1.9.1"
+    "@timedright/tiptap-commands": "^1.13.1",
+    "@timedright/tiptap-utils": "^1.9.1"
   },
   "peerDependencies": {
     "vue": "^2.5.17",
