--- a/packages/tiptap-extensions/package.json
+++ b/packages/tiptap-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@timedright/tiptap-extensions",
-  "version": "1.29.1",
+  "version": "1.29.2",
   "description": "Extensions for tiptap",
   "homepage": "https://tiptap.scrumpy.io",
   "license": "MIT",
@@ -21,6 +21,8 @@
     "url": "https://github.com/scrumpy/dougalg/issues"
   },
   "dependencies": {
+    "@timedright/tiptap": "^1.27.2",
+    "@timedright/tiptap-commands": "^1.13.2",
     "lowlight": "1.13.1",
     "prosemirror-collab": "1.2.2",
     "prosemirror-history": "1.1.3",
@@ -29,9 +31,7 @@
     "prosemirror-tables": "1.0.0",
     "prosemirror-transform": "1.2.5",
     "prosemirror-utils": "0.9.6",
-    "prosemirror-view": "1.14.7",
-    "@timedright/tiptap": "^1.27.1",
-    "@timedright/tiptap-commands": "^1.13.1"
+    "prosemirror-view": "1.14.7"
   },
   "peerDependencies": {
     "vue": "^2.5.17",
