--- a/packages/tiptap/package.json
+++ b/packages/tiptap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@timedright/tiptap",
-  "version": "1.27.1",
+  "version": "1.27.2",
   "description": "A rich-text editor for Vue.js",
   "homepage": "https://tiptap.scrumpy.io",
   "license": "MIT",
@@ -20,6 +20,8 @@
     "url": "https://github.com/dougalg/tiptap/issues"
   },
   "dependencies": {
+    "@timedright/tiptap-commands": "^1.13.2",
+    "@timedright/tiptap-utils": "^1.9.2",
     "prosemirror-commands": "1.1.4",
     "prosemirror-dropcursor": "1.3.2",
     "prosemirror-gapcursor": "1.1.5",
@@ -27,9 +29,7 @@
     "prosemirror-keymap": "1.1.3",
     "prosemirror-model": "1.9.1",
     "prosemirror-state": "1.3.3",
-    "prosemirror-view": "1.14.7",
-    "@timedright/tiptap-commands": "^1.13.1",
-    "@timedright/tiptap-utils": "^1.9.1"
+    "prosemirror-view": "1.14.7"
   },
   "peerDependencies": {
     "vue": "^2.5.17",
